--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,8 @@
             android:layout_height="wrap_content"
             android:text="Direction"
             android:onClick="direction"
-            android:layout_marginBottom="32dp"/>
+            android:layout_marginBottom="32dp"
+            android:id="@+id/direction"/>
 
     </LinearLayout>
 </RelativeLayout>
