--- a/app/src/main/res/layout/activity_direction1.xml
+++ b/app/src/main/res/layout/activity_direction1.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffca4c">
 
     <TextView
         android:layout_width="match_parent"
@@ -10,12 +11,15 @@
         android:text="Step 1"
         android:textSize="24sp"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"/>
+        android:layout_marginLeft="16dp"
+        android:textColor="#51280c"/>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:src="@drawable/preheatoven2"/>
 
     <TextView
@@ -24,7 +28,10 @@
         android:layout_weight="1"
         android:text="Preheat oven to 350 degrees F (175 degrees C)."
         android:textSize="24sp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:textColor="#51280c"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,7 +44,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_margin="16dp"
-            android:id="@+id/backActivity"/>
+            android:id="@+id/backActivity"
+            android:textColor="#51280c"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -46,7 +54,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_margin="16dp"
-            android:id="@+id/nextActivity"/>
+            android:id="@+id/nextActivity"
+            android:textColor="#51280c"/>
     </RelativeLayout>
 
 
