--- a/app/src/main/res/layout/activity_direction3.xml
+++ b/app/src/main/res/layout/activity_direction3.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffca4c">
 
     <TextView
         android:layout_width="match_parent"
@@ -10,12 +11,15 @@
         android:text="Step 3"
         android:textSize="24sp"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"/>
+        android:layout_marginLeft="16dp"
+        android:textColor="#51280c"/>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:src="@drawable/direction3"/>
 
     <TextView
@@ -25,7 +29,8 @@
         android:textSize="24sp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:textColor="#51280c"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -38,7 +43,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_margin="16dp"
-            android:id="@+id/backActivity"/>
+            android:id="@+id/backActivity"
+            android:textColor="#51280c"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -47,7 +53,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_margin="16dp"
-            android:id="@+id/nextActivity"/>
+            android:id="@+id/nextActivity"
+            android:textColor="#51280c"/>
     </RelativeLayout>
 
 
