--- a/app/src/main/res/layout/activity_ingrdients.xml
+++ b/app/src/main/res/layout/activity_ingrdients.xml
@@ -3,7 +3,7 @@
     android:id="@+id/LinearLayout01"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e7e7e7">
+    android:background="#ffca4c">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,7 +12,8 @@
         android:textAllCaps="true"
         android:layout_centerHorizontal="true"
         android:textSize="32sp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:textColor="@android:color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
