--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:textColor">#000000</item>
 
     </style>
 
